Fix header covering title of about section after clicking link

--- a/public/assets/stylesheets/styles.css
+++ b/public/assets/stylesheets/styles.css
@@ -546,3 +546,10 @@ a.callout-green {
 .modal-body {
 	background-color: #3e5262; 
 }
+
+.anchor {
+  /* adjust to account for fixed header */
+  position: relative;
+  top: -90px;
+  visibility: hidden;
+}
